[gd_scene load_steps=2 format=3 uid="uid://5vm2iatgmrxs"]

[ext_resource type="Script" path="res://simple_roll.gd" id="1_tqmuk"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqmuk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="VerticalLayout" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DiceGrid" type="HFlowContainer" parent="Background/VerticalLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DiceResult" type="Label" parent="Background/VerticalLayout"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
